Add identity apps (#1)
Co-authored-by: VyacheslavSemin <vyacheslav.semin@onlyoffice.com>
Reviewed-on: https://git.onlyoffice.com/ONLYOFFICE/Kubernetes-DocSpace/pulls/1
Co-authored-by: Valeria Bagisheva <valeriya.bagisheva@onlyoffice.com>
Co-committed-by: Valeria Bagisheva <valeriya.bagisheva@onlyoffice.com>

--- a/templates/services/identity-api.yaml
+++ b/templates/services/identity-api.yaml
@@ -8,11 +8,14 @@ metadata:
     {{- if .Values.commonLabels }}
     {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
     {{- end }}
+  {{- if .Values.commonAnnotations }}
+  annotations: {{- include "docspace.annotations" ( dict "keyName" .Values.commonAnnotations "context" $ ) | nindent 4 }}
+  {{- end }}
 spec:
   ports:
-  - port: 9090
-    name: identity-api
-    targetPort: 9090
+  - port: {{ .Values.identity.api.containerPorts.api }}
+    name: api
+    targetPort: {{ .Values.identity.api.containerPorts.api }}
   selector:
     app: identity-api
     {{- if .Values.commonLabels }}
