--- a/templates/configmaps/docspace.yaml
+++ b/templates/configmaps/docspace.yaml
@@ -15,6 +15,7 @@ metadata:
     {{- end }}
 data:
   ENV_EXTENSION: {{ .Values.connections.envExtension | quote }}
+  NODE_OPTIONS: {{ .Values.nodeOptions | quote }}
   DATABASE_MIGRATION: {{ .Values.connections.mysqlDatabaseMigration | quote }}
   API_HOST: "http://{{ template "docspace.svc.router.name" . }}:{{ .Values.router.service.port.external }}"
   MYSQL_HOST: {{ .Values.connections.mysqlHost }}
