--- a/templates/applications/identity.yaml
+++ b/templates/applications/identity.yaml
@@ -130,16 +130,11 @@ spec:
         {{- end }}
         resources: {{- toYaml .Values.identity.authorization.resources | nindent 10 }}
         env:
-        - name: SPRING_APPLICATION_NAME
-          valueFrom:
-            configMapKeyRef:
-              name: identity
-              key: SPRING_APPLICATION_NAME
         - name: SERVER_PORT
           value: {{ .Values.identity.authorization.containerPorts.authorization | quote }}
-        - name: JDBC_USER_NAME
+        - name: MYSQL_USER
           value: {{ default .Values.connections.mysqlUser .Values.identity.authorization.mysqlUser }}
-        - name: JDBC_PASSWORD
+        - name: MYSQL_PASSWORD
           valueFrom:
             secretKeyRef:
               name: {{ template "docspace.mysql.secretName" . }}
@@ -156,5 +151,5 @@ spec:
               key: broker_uri
         envFrom:
         - configMapRef:
-            name: identity
+            name: docspace
 {{- end }}
