--- a/values.yaml
+++ b/values.yaml
@@ -376,8 +376,10 @@ initContainers:
       # initContainers.rootless.containerSecurityContext.enabled Enable security context for the rootless initContainer
       enabled: true
       # initContainers.rootless.containerSecurityContext.runAsUser User ID for the DocSpace rootless initContainer
+      # When performing a clean install of 3.0+ images or upgrading from version 3.0+ to a later version, you can specify uid=104
       runAsUser: 0
       # initContainers.rootless.containerSecurityContext.runAsGroup Group ID for the DocSpace rootless initContainer
+      # When performing a clean install of 3.0+ images or upgrading from version 3.0+ to a later version, you can specify gid=104
       runAsGroup: 0
       # containerSecurityContext.allowPrivilegeEscalation Controls whether a process can gain more privileges than its parent process
       allowPrivilegeEscalation: false
